fix: Show parnet relationships after refresh
We were not sending th parent id to the client, with the initial
request, so that meant that the client didn't know about any of the
relationships that happened.

To fix this we simply add the parent id to the response.
